
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int bzero (char*,int) ;
 char* malloc (int) ;
 int strlen (char*) ;

char* unicode(char * data)
{
 int len = strlen(data);
 int i;
 char * ret = malloc(110);
 int l = 0;

 bzero(ret,110);
 for(i=0;i<len;i++)
 {
  ret[i*2] = data[i];
 }

 if(len & 1){
  ret[len*2+7] = 0x19;
 ret[len*2+9] = 0x02;
 }
 else
    {
  ret[len*2+8] = 0x19;
  ret[len*2+10] = 0x02;
 }

 return(ret);
}
