; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_20005.c_unicode.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_20005.c_unicode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @unicode(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @strlen(i8* %7)
  store i32 %8, i32* %3, align 4
  %9 = call i8* @malloc(i32 110)
  store i8* %9, i8** %5, align 8
  store i32 0, i32* %6, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @bzero(i8* %10, i32 110)
  store i32 0, i32* %4, align 4
  br label %12

12:                                               ; preds = %27, %1
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %3, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %30

16:                                               ; preds = %12
  %17 = load i8*, i8** %2, align 8
  %18 = load i32, i32* %4, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i8, i8* %17, i64 %19
  %21 = load i8, i8* %20, align 1
  %22 = load i8*, i8** %5, align 8
  %23 = load i32, i32* %4, align 4
  %24 = mul nsw i32 %23, 2
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8, i8* %22, i64 %25
  store i8 %21, i8* %26, align 1
  br label %27

27:                                               ; preds = %16
  %28 = load i32, i32* %4, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %4, align 4
  br label %12

30:                                               ; preds = %12
  %31 = load i32, i32* %3, align 4
  %32 = and i32 %31, 1
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %47

34:                                               ; preds = %30
  %35 = load i8*, i8** %5, align 8
  %36 = load i32, i32* %3, align 4
  %37 = mul nsw i32 %36, 2
  %38 = add nsw i32 %37, 7
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i8, i8* %35, i64 %39
  store i8 25, i8* %40, align 1
  %41 = load i8*, i8** %5, align 8
  %42 = load i32, i32* %3, align 4
  %43 = mul nsw i32 %42, 2
  %44 = add nsw i32 %43, 9
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i8, i8* %41, i64 %45
  store i8 2, i8* %46, align 1
  br label %60

47:                                               ; preds = %30
  %48 = load i8*, i8** %5, align 8
  %49 = load i32, i32* %3, align 4
  %50 = mul nsw i32 %49, 2
  %51 = add nsw i32 %50, 8
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds i8, i8* %48, i64 %52
  store i8 25, i8* %53, align 1
  %54 = load i8*, i8** %5, align 8
  %55 = load i32, i32* %3, align 4
  %56 = mul nsw i32 %55, 2
  %57 = add nsw i32 %56, 10
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds i8, i8* %54, i64 %58
  store i8 2, i8* %59, align 1
  br label %60

60:                                               ; preds = %47, %34
  %61 = load i8*, i8** %5, align 8
  ret i8* %61
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @bzero(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
